--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "my-package",
   "version": "1.0.0",
   "description": "Independent react module",
-  "main": "./lib/index.js",
+  "main": "./lib/bundle.js",
   "peerDependencies": {
-    "react": "^16.8.6"
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   },
   "scripts": {
-    "start": "webpack --watch",
-    "build": "webpack",
-    "example": "browserify -t babelify --debug demo/index.js -o demo/bundle.js"
+    "start": "webpack-dev-server --open --env.NODE_ENV=local --env.development --mode development",
+    "build": "webpack --config webpack.config.js --env.NODE_ENV=local --env.development"
   },
   "author": "Theo I. theodoreme@gmail.com",
   "license": "ISC",
@@ -18,9 +18,9 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "postcss-flexbugs-fixes": "^4.1.0",
     "postcss-loader": "^3.0.0",
+    "webpack": "^4.29.6",
     "react": "^16.8.6",
-    "react-dom": "^16.11.0",
-    "webpack": "^4.29.6"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/cli": "^7.6.4",
@@ -31,9 +31,12 @@
     "babel-loader": "^8.0.6",
     "babelify": "^10.0.0",
     "browserify": "^16.5.0",
+    "clean-webpack-plugin": "^3.0.0",
     "css-loader": "^3.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
-    "webpack-cli": "^3.3.0"
+    "webpack-cli": "^3.3.0",
+    "webpack-dev-server": "^3.9.0"
   }
 }
